// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`animatedProps Multiple animated props objects matches snapshot 1`] = `
<View>
  <TextInput
    collapsable={false}
    defaultValue="Box width: 20"
    jestAnimatedProps={
      {
        "value": {
          "defaultValue": "Box width: 20",
          "placeholder": "Click count: 0",
          "text": "Box width: 20",
        },
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    placeholder="Click count: 0"
    testID="text"
    text="Box width: 20"
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="button"
  >
    <View
      style={
        [
          {},
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#007AFF",
              "fontSize": 18,
              "margin": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Click me
      </Text>
    </View>
  </View>
</View>
`;

exports[`animatedProps Single animated props object matches snapshot 1`] = `
<View>
  <TextInput
    collapsable={false}
    defaultValue="Box width: 20"
    jestAnimatedProps={
      {
        "value": {
          "defaultValue": "Box width: 20",
          "text": "Box width: 20",
        },
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    testID="text"
    text="Box width: 20"
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
    testID="button"
  >
    <View
      style={
        [
          {},
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#007AFF",
              "fontSize": 18,
              "margin": 8,
              "textAlign": "center",
            },
          ]
        }
      >
        Click me
      </Text>
    </View>
  </View>
</View>
`;
